# WeCode

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  NOTICE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  design-qa.md  justfile
.github/workflows/: build-desktop-test.yml  release-agent.yml  release-gpui.yml  release-macos-formal.yml  release-server.yml
apps/: README.md
apps/agent/: Cargo.toml  README.md
apps/agent/scripts/: install.sh
apps/agent/scripts/release/: package-agent.mjs  publish-agent-release.mjs  test-agent-release-scripts.mjs
apps/agent/src/: ai_stats.rs  cmd_app.rs  cmd_config.rs  cmd_device.rs  cmd_integration.rs  cmd_pair.rs  cmd_product.rs  cmd_service.rs  cmd_start.rs  cmd_update.rs  config_store.rs  device_store.rs  git.rs  host.rs  logo.rs  main.rs  memory.rs  paths.rs  projects.rs  runstate.rs  sessions.rs  smoke.rs  terminals.rs  web_test.rs  worktree.rs
apps/agent/src/git/: mod.rs  ops.rs  status.rs
apps/agent/tests/: integration_cli.rs  product_cli_json_contract.rs
apps/desktop/: Cargo.toml  README.md
apps/mobile/: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md  README.zh-CN.md  pubspec.yaml
apps/relay-server/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  config.example.toml  docker-compose.yml  go.mod  go.sum
apps/server/: Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
apps/server/deploy/: codux-service.service  config.toml  docker.toml
apps/server/scripts/release/: build.sh
apps/server/src/: config.rs  hub.rs  main.rs  stats.rs  store.rs
apps/wrapper-helper/: Cargo.toml
crates/: README.md
crates/codux-ai-history/: Cargo.toml
crates/codux-ai-sessions/: Cargo.toml
crates/codux-ai-sessions/src/: dispatch.rs  helpers.rs  lib.rs  queries.rs  restore.rs  session_fork.rs  summary.rs  tests.rs  types.rs
crates/codux-gateway/: Cargo.toml
crates/codux-git/: Cargo.toml
crates/codux-im-bridge/: Cargo.toml
crates/codux-im-bridge/src/: binding.rs  lib.rs  runtime.rs  wechat.rs
crates/codux-protocol/: Cargo.toml  README.md
crates/codux-protocol-ffi/: Cargo.toml  README.md
crates/codux-protocol-ffi/src/: android_exports.rs  common.rs  crypto_exports.rs  lib.rs  output_router_exports.rs  protocol_exports.rs  runtime_exports.rs  terminal_exports.rs  transport_exports.rs
crates/codux-remote-crypto/: Cargo.toml
crates/codux-remote-transport/: Cargo.toml  README.md
crates/codux-remote-transport/src/: control_messages.rs  health.rs  iroh_link.rs  lib.rs  local_memory.rs  relay_presets.json  tests.rs  url_rules.rs  web_tunnel.rs  webrtc.rs  websocket.rs
crates/codux-runtime-core/: Cargo.toml  README.md
crates/codux-runtime-core/src/: ai_stats.rs  file.rs  git.rs  host.rs  lib.rs  path.rs  project.rs  subscription.rs  terminal.rs  upload.rs  worktree.rs
crates/codux-runtime-live/: Cargo.toml
crates/codux-terminal-core/: Cargo.toml  README.md
crates/codux-terminal-pty/: Cargo.toml  README.md
crates/wecode-ai-history/: Cargo.toml
crates/wecode-ai-sessions/: Cargo.toml
crates/wecode-ai-sessions/src/: dispatch.rs  helpers.rs  lib.rs  queries.rs  restore.rs  session_fork.rs  summary.rs  tests.rs  types.rs
crates/wecode-gateway/: Cargo.toml
crates/wecode-gateway/src/: accounts.rs  config.rs  lib.rs  main.rs  model_catalog.rs  model_resolver.rs  util.rs
crates/wecode-gateway/src/auth/: file.rs  mod.rs  refresh.rs
crates/wecode-gateway/src/convert/: kiro.rs  openai.rs
crates/wecode-gateway/src/routes/: anthropic.rs  mod.rs  openai.rs
crates/wecode-gateway/src/upstream/: mod.rs
crates/wecode-git/: Cargo.toml
crates/wecode-git/src/: commands.rs  lib.rs  metadata.rs  operations.rs  repository.rs  tests.rs  types.rs  watch.rs  wire.rs  worktree.rs
crates/wecode-git/src/metadata/: managed_memory.rs  stashes.rs  tags.rs
crates/wecode-git/src/operations/: branch.rs  commit.rs  remote.rs  stage.rs  stash.rs  tag.rs
crates/wecode-git/src/service/: branch.rs  commit.rs  remote.rs  stash.rs  tag.rs
crates/wecode-im-bridge/: Cargo.toml
crates/wecode-integrations/: Cargo.toml
crates/wecode-llm/: Cargo.toml
crates/wecode-memory/: Cargo.toml
crates/wecode-protocol/: Cargo.toml  README.md
crates/wecode-protocol-ffi/: Cargo.toml  README.md
crates/wecode-protocol-ffi/src/: android_exports.rs  common.rs  lib.rs  output_router_exports.rs  protocol_exports.rs  runtime_exports.rs  terminal_exports.rs  transport_exports.rs
crates/wecode-remote-transport/: Cargo.toml  README.md  build.rs
crates/wecode-runtime-core/: Cargo.toml  README.md
crates/wecode-runtime-core/src/: ai_stats.rs  file.rs  git.rs  host.rs  lib.rs  path.rs  project.rs  subscription.rs  terminal.rs  upload.rs  worktree.rs
crates/wecode-runtime-live/: Cargo.toml
crates/wecode-terminal-core/: Cargo.toml  README.md
crates/wecode-terminal-pty/: Cargo.toml  README.md
docs/: ROADMAP.md  interconnect-plan.md  protocol.md  remote-protocol-architecture.md
plan/: remote-sdk-extraction-plan.md
runtime/: Cargo.toml
runtime-assets/scripts/: scroll-cpu-sample.sh
runtime/src/: ai_history.rs  ai_history_indexer.rs  ai_runtime_state.rs  app_commands.rs  app_icon.rs  app_info.rs  async_runtime.rs  config.rs  desktop_pet.rs  dialog.rs  file_editor_layout.rs  file_tree_state.rs  files.rs  git_ui_state.rs  i18n.rs  lib.rs  memory.rs  notification.rs  persistent_cache.rs  pet.rs  project_activity.rs  project_store.rs  remote.rs  runtime_activity.rs  runtime_bridge.rs  runtime_cache.rs  runtime_ingress.rs  runtime_paths.rs  runtime_trace.rs  ssh.rs  terminal_layout.rs  terminal_pty.rs  terminal_runtime.rs  tool_permissions.rs  update.rs  worktree.rs
scripts/release/: package-gpui.mjs  prepare-release.mjs  publish-github-release.mjs  test-publish-github-release.mjs
skills/wecode-control/: SKILL.md
src/: app.rs  assets.rs  main.rs  terminal.rs  theme.rs
src/app/: about.rs  ai_history_mapping.rs  app_events.rs  (+47 more)
tauri-runtime-src/: ai_runtime.rs  project_activity.rs  runtime_trace.rs
tools/: build-windows.ps1  run-desktop-dev.sh
(+1350 files in other folders)
