[package]
name = "codux-gpui-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
alacritty_terminal = "0.25.1"
codux-runtime = { path = "runtime" }
flume = "0.12"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }
parking_lot = "0.12"
portable-pty = "0.9"
rust-embed = "8.11"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v5"] }
