[workspace]
members = [
    "apps/desktop",
    "apps/desktop/runtime",
    "apps/agent",
    "apps/wrapper-helper",
    "crates/wecode-ai-history",
    "crates/wecode-ai-sessions",
    "crates/wecode-gateway",
    "crates/wecode-git",
    "crates/wecode-integrations",
    "crates/wecode-im-bridge",
    "crates/wecode-llm",
    "crates/wecode-memory",
    "crates/wecode-protocol",
    "crates/wecode-protocol-ffi",
    "crates/wecode-remote-transport",
    "crates/wecode-runtime-core",
    "crates/wecode-runtime-live",
    "crates/wecode-terminal-core",
    "crates/wecode-terminal-pty",
]
default-members = ["apps/desktop"]
resolver = "2"

[profile.dev]
opt-level = 1               # keep local builds responsive on terminal/render hot paths
debug = "line-tables-only"   # keep file:line for panics/backtraces, drop heavy var debuginfo
split-debuginfo = "unpacked"  # debuginfo stays in .o files → faster linking, smaller binary

[profile.dev.package."*"]
opt-level = 2               # optimize GPUI, terminal parser, and other dependencies in dev builds

[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
