[package]
name = "wecode-agent"
version = "2.0.0-beta.6"
edition = "2024"

# The cargo binary is `wecode-agent` to avoid colliding with the desktop app's
# `wecode` bin in the workspace. The shipped/installed command is `wecode`
# (release artifacts are named `wecode-agent-<version>-<os>-<arch>`), and clap's
# `bin_name` already presents it as `wecode` in help/usage.
[[bin]]
name = "wecode-agent"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
wecode-ai-history = { path = "../../crates/wecode-ai-history" }
wecode-ai-sessions = { path = "../../crates/wecode-ai-sessions" }
wecode-git = { path = "../../crates/wecode-git" }
wecode-integrations = { path = "../../crates/wecode-integrations" }
wecode-memory = { path = "../../crates/wecode-memory" }
wecode-protocol = { path = "../../crates/wecode-protocol" }
wecode-remote-transport = { path = "../../crates/wecode-remote-transport" }
wecode-runtime-live = { path = "../../crates/wecode-runtime-live" }
wecode-runtime-core = { path = "../../crates/wecode-runtime-core" }
wecode-terminal-core = { path = "../../crates/wecode-terminal-core" }
wecode-terminal-pty = { path = "../../crates/wecode-terminal-pty" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
git2 = { version = "0.21.0", features = ["cred", "https", "ssh", "vendored-openssl"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.11"
qrcode = "0.14"
fs4 = "0.13"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
