[package]
name = "codux-ai-sessions"
version = "0.1.0"
edition = "2024"

[dependencies]
codux-ai-history = { path = "../codux-ai-history" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
