[package]
name = "codux-im-bridge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Chat-platform bridges (WeChat iLink Bot, etc.) that route messages into Codux terminal/agent sessions."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
aes = "0.8"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
