[package]
name = "codux-protocol-ffi"
version = "1.7.6"
edition = "2024"

[lib]
name = "codux_protocol_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
codux-protocol = { path = "../codux-protocol" }
codux-remote-crypto = { path = "../codux-remote-crypto" }
codux-remote-transport = { path = "../codux-remote-transport" }
codux-terminal-core = { path = "../codux-terminal-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
