[package]
name = "codux-remote-transport"
version = "1.7.6"
edition = "2024"

[dependencies]
async-trait = "0.1"
codux-protocol = { path = "../codux-protocol" }
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2.5.7"
webrtc = "0.8.0"
