[package]
name = "wecode-ai-sessions"
version = "0.1.0"
edition = "2024"

[dependencies]
wecode-ai-history = { path = "../wecode-ai-history" }
wecode-protocol = { path = "../wecode-protocol" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
