[package]
name = "wecode-git"
version = "0.1.0"
edition = "2024"

[dependencies]
wecode-runtime-core = { path = "../wecode-runtime-core" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.21.0", features = ["cred", "https", "ssh", "vendored-openssl"] }
notify = "8"
