[package]
name = "wecode-protocol-ffi"
version = "1.8.1"
edition = "2024"

[lib]
name = "wecode_protocol_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
wecode-protocol = { path = "../wecode-protocol" }
wecode-remote-transport = { path = "../wecode-remote-transport" }
wecode-terminal-core = { path = "../wecode-terminal-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
